# Summarizer

./: README.md  pyproject.toml
conf/: config.yaml
outputs/2025-08-17/16-13-07/.hydra/: config.yaml  hydra.yaml
outputs/2025-08-17/16-17-11/.hydra/: hydra.yaml
outputs/2025-08-17/16-17-11/outputs/2025-08-17/16-17-11/.hydra/: hydra.yaml
outputs/2025-08-17/16-19-19/.hydra/: hydra.yaml
outputs/2025-08-17/16-19-20/.hydra/: hydra.yaml
outputs/2025-08-17/16-22-21/.hydra/: hydra.yaml
outputs/2025-08-17/16-39-12/.hydra/: config.yaml  hydra.yaml
outputs/2025-08-17/17-20-53/.hydra/: hydra.yaml
outputs/2025-08-17/17-20-54/.hydra/: hydra.yaml
summariser/: __main__.py
summariser/summariser-extension/: background.js  content.js  highlighter.js  manifest.json  options.html  popup.html  popup.js
