[project]
name = "summariser"
version = "0.1.0"
description = ""
packages = [{include = "summariser"}]
authors = [
    {name = "Mohammad Ammar",email = "ammargk8497@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9 ,<4"
dependencies = [
    "hydra-core (>=1.3.2,<2.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "flask-cors (==4.0.1)",
    "loguru (==0.7.2)",
    "ratelimit (>=2.2.1,<3.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-google-genai (>=2.1.9,<3.0.0)",
    "langchain-core (>=0.3.74,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
